--- a/Hummingbird.CustomTools/ViewJsonWebToken.xaml
+++ b/Hummingbird.CustomTools/ViewJsonWebToken.xaml
@@ -5,9 +5,57 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Hummingbird.CustomTools"
-             mc:Ignorable="d" 
+    xmlns:avalonedit="http://icsharpcode.net/sharpdevelop/avalonedit"
+    mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <Grid>
-            
-    </Grid>
+    <!-- Enable following resource will help to preview target styles included in Hummingbird UI.
+    During deployment these resources should be removed.
+    -->
+    <!--
+    <ui:ModernContent.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="pack://application:,,,/Hummingbird.UI;component/Styles/DefaultStyle.xaml" />
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
+    </ui:ModernContent.Resources>-->
+    <ui:GridWithPadding Padding="4">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="*" />
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="Auto" />
+            <ColumnDefinition Width="*" />
+        </Grid.ColumnDefinitions>
+        <Border Background="{DynamicResource HighlightGradientBrushHorizontal}"  Grid.ColumnSpan="2" >
+            <TextBlock Text="JSON Web Token Utility" Foreground="White" Margin="10,4" Style="{DynamicResource TextBlockViewHeader}" HorizontalAlignment="Right" />
+        </Border>
+
+        <TextBlock Text="Encoded Token:"  Style="{DynamicResource TextBlockViewHeader}" Grid.Row="1" />
+        <TextBox x:Name="txtToken" Grid.Row="1"  Grid.Column="2" TextChanged="TxtToken_TextChanged"/>
+
+        <TextBlock Text="Encoded Secret:"  Style="{DynamicResource TextBlockViewHeader}" Grid.Row="2" />
+        <TextBox x:Name="txtSecret" Grid.Row="2"  Grid.Column="2" TextChanged="TxtSecret_TextChanged"/>
+
+        <ui:GridWithPadding Grid.Row="3" Grid.Column="1" Padding="4">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="*" />
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+            </Grid.ColumnDefinitions>
+
+            <TextBlock Text="HEADER"  Style="{DynamicResource TextBlockInformation}" />
+            <avalonedit:TextEditor Foreground="{DynamicResource ForegroundBrush}" Grid.Row="1" Background="Transparent" HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto" SyntaxHighlighting="Java" x:Name="txtHeader" TextChanged="TxtHeader_TextChanged" />
+
+            <TextBlock Text="PAYLOAD"  Style="{DynamicResource TextBlockInformation}" Grid.Column="1"  />
+            <avalonedit:TextEditor Foreground="{DynamicResource ForegroundBrush}" Grid.Row="1" Grid.Column="1" Background="Transparent" HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto" SyntaxHighlighting="Java" x:Name="txtPayload" TextChanged="TxtPayload_TextChanged"/>
+        </ui:GridWithPadding>
+        
+    </ui:GridWithPadding>
 </ui:ModernContent>
