--- a/Hummingbird.CustomTools/ViewDocFormatter.xaml
+++ b/Hummingbird.CustomTools/ViewDocFormatter.xaml
@@ -5,9 +5,128 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Hummingbird.CustomTools"
-             mc:Ignorable="d" 
+    xmlns:avalonedit="http://icsharpcode.net/sharpdevelop/avalonedit"
+    mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
-            
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="*" />
+        </Grid.RowDefinitions>
+        
+        <Border Background="{DynamicResource HighlightGradientBrushHorizontal}"  >
+            <TextBlock Text="Document Formatting Utility" Foreground="White" Margin="10,4" Style="{DynamicResource TextBlockViewHeader}" HorizontalAlignment="Right" />
+        </Border>
+
+        <StackPanel Orientation="Horizontal" Background="{DynamicResource ControlBackgroundBrush}" Grid.Row="1">
+            <Button Style="{DynamicResource ToolbarButtonStyle}" Margin="4,1" x:Name="txtFormatXML" Click="TxtFormatXML_Click">
+                <StackPanel Orientation="Horizontal">
+                        <Rectangle Width="16" Height="16" Margin="4">
+                            <Rectangle.Fill>
+                                <DrawingBrush>
+                                    <DrawingBrush.Drawing>
+                                        <DrawingGroup>
+                                            <DrawingGroup.Children>
+                                                <GeometryDrawing Brush="#00FFFFFF" Geometry="F1M16,16L0,16 0,0 16,0z" />
+                                                <GeometryDrawing Brush="#FFF6F6F6" Geometry="F1M9.0855,2.5L10.5845,4 9.5855,5 7.4155,5 6.4165,4 7.9135,2.5 6.0005,0.586 2.5855,4 6.0005,7.414 7.0005,6.416 7.0005,8 2.9995,8 2.9995,11 0.999499999999999,11 0.999499999999999,16 8.0005,16 8.0005,11 9.0005,11 9.0005,16 16.0005,16 16.0005,11 14.0005,11 14.0005,8 9.9995,8 9.9995,6.416 10.9995,7.414 14.4145,4 10.9995,0.586z" />
+                                                <GeometryDrawing Brush="#FF424242" Geometry="F1M3.999,9L7.999,9 7.999,6 8.999,6 8.999,9 12.999,9 12.999,12 14.999,12 14.999,15 9.999,15 9.999,12 11.999,12 11.999,10 4.999,10 4.999,12 6.999,12 6.999,15 1.999,15 1.999,12 3.999,12z M12.999,4L10.999,2 10.499,2.5 11.999,4 10.499,5.5 10.999,6z M3.999,4L5.999,6 6.499,5.5 4.999,4 6.499,2.5 5.999,2z" />
+                                            </DrawingGroup.Children>
+                                        </DrawingGroup>
+                                    </DrawingBrush.Drawing>
+                                </DrawingBrush>
+                            </Rectangle.Fill>
+                        </Rectangle>
+                    <TextBlock Text="Format as XML" VerticalAlignment="Center" />
+                </StackPanel>
+            </Button>
+            <Button Style="{DynamicResource ToolbarButtonStyle}" Margin="4,1" x:Name="txtFormatJSON" Click="TxtFormatJSON_Click">
+                <StackPanel Orientation="Horizontal">
+                    <Rectangle Width="16" Height="16"  Margin="4">
+                            <Rectangle.Fill>
+                                <DrawingBrush>
+                                    <DrawingBrush.Drawing>
+                                        <DrawingGroup>
+                                            <DrawingGroup.Children>
+                                                <GeometryDrawing Brush="#00FFFFFF" Geometry="F1M16,16L0,16 0,0 16,0z" />
+                                                <GeometryDrawing Brush="#FFF6F6F6" Geometry="F1M16,8L16,11 15,11 15,14 8.977,14C8.065,15.208 6.63,16 5,16 2.239,16 0,13.761 0,11 0,8.239 2.239,6 5,6 5.343,6 5.677,6.035 6,6.101L6,6 6,5 2,5 2,0 7,0 7,1 14,1 14,4 10,4 10,5 15,5 15,8z" />
+                                                <GeometryDrawing Brush="#FF424242" Geometry="F1M6,1L3,1 3,4 6,4z M7.973,7L9,7 9,5 7,5 7,6.422C7.349,6.575,7.67,6.775,7.973,7 M9.578,13L14,13 14,12 9.899,12C9.828,12.349,9.717,12.682,9.578,13 M10,10L15,10 15,9 10,9z M8.977,8C8.984,8.009,8.993,8.018,9,8.027L9,8z M13,2L7,2 7,3 13,3z M10,6L14,6 14,7 10,7z" />
+                                                <GeometryDrawing Geometry="F1M1,10.995C1,13.572,3.238,15,5.002,15L5.002,15C4.604,14.942,3.272,14.656,3.254,11.592L3.254,11.592C3.243,9.519,3.931,8.69,5,9.056L5,9.056C5.024,9.064,6.178,9.519,6.178,11.008L6.178,11.008C6.178,12.49,5.004,12.949,5.004,12.949L5.004,12.949C6.779,15.368,8.515,12.274,8.513,10.413L8.513,10.413C8.51,8.212,6.279,6.983,5.002,6.983L5.002,6.983C2.953,6.983,1,8.677,1,10.995">
+                                                    <GeometryDrawing.Brush>
+                                                        <LinearGradientBrush StartPoint="2.1140785,8.2364802" EndPoint="7.7651825,13.8878073" MappingMode="Absolute">
+                                                            <LinearGradientBrush.GradientStops>
+                                                                <GradientStop Color="#FF000000" Offset="0" />
+                                                                <GradientStop Color="#FFFFFFFF" Offset="1" />
+                                                            </LinearGradientBrush.GradientStops>
+                                                        </LinearGradientBrush>
+                                                    </GeometryDrawing.Brush>
+                                                </GeometryDrawing>
+                                                <GeometryDrawing Geometry="F1M5.019,6.983C5.105,6.983,5.192,6.986,5.28,6.993L5.28,6.993C5.212,6.983,5.152,6.978,5.101,6.978L5.101,6.978C5.07,6.978,5.043,6.98,5.019,6.983 M7.653,10.443C7.653,12.357,6.051,13.396,5.009,12.952L5.009,12.952C4.986,12.944,3.83,12.489,3.83,11L3.83,11C3.83,9.518,5.002,9.053,5.002,9.053L5.002,9.053C3.829,8.65,2.393,9.616,2.393,11.551L2.393,11.551C2.393,14.713,4.735,15,5.019,15L5.019,15C7.07,15,9.022,13.305,9.022,10.987L9.022,10.987C9.022,8.535,6.997,7.124,5.28,6.993L5.28,6.993C6.021,7.106,7.653,7.886,7.653,10.443">
+                                                    <GeometryDrawing.Brush>
+                                                        <LinearGradientBrush StartPoint="8.0212784,13.6321983" EndPoint="2.3700099,7.9807067" MappingMode="Absolute">
+                                                            <LinearGradientBrush.GradientStops>
+                                                                <GradientStop Color="#FF000000" Offset="0" />
+                                                                <GradientStop Color="#FFFFFFFF" Offset="1" />
+                                                            </LinearGradientBrush.GradientStops>
+                                                        </LinearGradientBrush>
+                                                    </GeometryDrawing.Brush>
+                                                </GeometryDrawing>
+                                            </DrawingGroup.Children>
+                                        </DrawingGroup>
+                                    </DrawingBrush.Drawing>
+                                </DrawingBrush>
+                            </Rectangle.Fill>
+                        </Rectangle>
+                    <TextBlock Text="Format as JSON" VerticalAlignment="Center" />
+                </StackPanel>
+            </Button>
+            <Button Style="{DynamicResource ToolbarButtonStyle}" Margin="4,1" x:Name="btnZoomIn" Click="BtnZoomIn_Click">
+                <StackPanel Orientation="Horizontal">
+                    <Rectangle Width="16" Height="16"  Margin="4">
+                            <Rectangle.Fill>
+                                <DrawingBrush>
+                                    <DrawingBrush.Drawing>
+                                        <DrawingGroup>
+                                            <DrawingGroup.Children>
+                                                <GeometryDrawing Brush="#00FFFFFF" Geometry="F1M16,16L0,16 0,0 16,0z" />
+                                                <GeometryDrawing Brush="#FFF6F6F6" Geometry="F1M8.6543,11.5479C7.9683,11.8459 7.2373,11.9999 6.5003,11.9999 3.4673,11.9999 1.0003,9.5319 1.0003,6.4999 1.0003,3.4669 3.4673,0.9999 6.5003,0.9999 9.5323,0.9999 12.0003,3.4669 12.0003,6.4999 12.0003,7.2249 11.8483,7.9479 11.5583,8.6259L16.0003,13.0659 16.0003,13.4329 13.4373,15.9999 13.1073,15.9999z" />
+                                                <GeometryDrawing Brush="#FF424242" Geometry="F1M3,6.5C3,4.567 4.567,3 6.5,3 8.433,3 10,4.567 10,6.5 10,8.433 8.433,10 6.5,10 4.567,10 3,8.433 3,6.5 M14.769,13.25L10.338,8.819C10.75,8.14 11,7.352 11,6.5 11,4.015 8.985,2 6.5,2 4.015,2 2,4.015 2,6.5 2,8.985 4.015,11 6.5,11 7.362,11 8.16,10.745 8.844,10.325L13.271,14.75z" />
+                                                <GeometryDrawing Brush="#FFF0EFF1" Geometry="F1M7,7L7,9 6,9 6,7 4,7 4,6 6,6 6,4 7,4 7,6 9,6 9,7z M6.5,3C4.567,3 3,4.567 3,6.5 3,8.433 4.567,10 6.5,10 8.433,10 10,8.433 10,6.5 10,4.567 8.433,3 6.5,3" />
+                                                <GeometryDrawing Brush="#FF00539C" Geometry="F1M9,6L9,7 7,7 7,9 6,9 6,7 4,7 4,6 6,6 6,4 7,4 7,6z" />
+                                            </DrawingGroup.Children>
+                                        </DrawingGroup>
+                                    </DrawingBrush.Drawing>
+                                </DrawingBrush>
+                            </Rectangle.Fill>
+                        </Rectangle>
+                    <TextBlock Text="Zoom in" VerticalAlignment="Center" />
+                </StackPanel>
+            </Button>
+            <Button Style="{DynamicResource ToolbarButtonStyle}" Margin="4,1" x:Name="btnZoomOut" Click="BtnZoomOut_Click">
+                <StackPanel Orientation="Horizontal">
+                    <Rectangle Width="16" Height="16"  Margin="4">
+                        <Rectangle.Fill>
+                            <DrawingBrush>
+                                <DrawingBrush.Drawing>
+                                    <DrawingGroup>
+                                        <DrawingGroup.Children>
+                                            <GeometryDrawing Brush="#00FFFFFF" Geometry="F1M16,16L0,16 0,0 16,0z" />
+                                            <GeometryDrawing Brush="#FFF6F6F6" Geometry="F1M8.6543,11.5479C7.9683,11.8459 7.2373,11.9999 6.5003,11.9999 3.4673,11.9999 1.0003,9.5319 1.0003,6.4999 1.0003,3.4669 3.4673,0.9999 6.5003,0.9999 9.5323,0.9999 12.0003,3.4669 12.0003,6.4999 12.0003,7.2249 11.8483,7.9479 11.5583,8.6259L16.0003,13.0659 16.0003,13.4329 13.4373,15.9999 13.1073,15.9999z" />
+                                            <GeometryDrawing Brush="#FF424242" Geometry="F1M3,6.5C3,4.567 4.567,3 6.5,3 8.433,3 10,4.567 10,6.5 10,8.433 8.433,10 6.5,10 4.567,10 3,8.433 3,6.5 M14.769,13.25L10.338,8.819C10.75,8.14 11,7.352 11,6.5 11,4.015 8.985,2 6.5,2 4.015,2 2,4.015 2,6.5 2,8.985 4.015,11 6.5,11 7.362,11 8.16,10.745 8.844,10.325L13.271,14.75z" />
+                                            <GeometryDrawing Brush="#FFF0EFF1" Geometry="F1M4,6L9,6 9,7 4,7z M6.5,3C4.567,3 3,4.567 3,6.5 3,8.433 4.567,10 6.5,10 8.433,10 10,8.433 10,6.5 10,4.567 8.433,3 6.5,3" />
+                                            <GeometryDrawing Brush="#FF00539C" Geometry="F1M4,7L9,7 9,6 4,6z" />
+                                        </DrawingGroup.Children>
+                                    </DrawingGroup>
+                                </DrawingBrush.Drawing>
+                            </DrawingBrush>
+                        </Rectangle.Fill>
+                    </Rectangle>
+                    <TextBlock Text="Zoom out" VerticalAlignment="Center" />
+                </StackPanel>
+            </Button>
+
+        </StackPanel>
+
+        <avalonedit:TextEditor Grid.Row="2" x:Name="txtDocument" ShowLineNumbers="True"  HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto" Background="Transparent" PreviewMouseWheel="TxtDocument_MouseWheel" PreviewKeyDown="TxtDocument_PreviewKeyDown" PreviewKeyUp="TxtDocument_PreviewKeyUp" FontSize="12" />
     </Grid>
 </ui:ModernContent>
