--- a/Hummingbird.CustomTools/ViewJsonWebToken.xaml
+++ b/Hummingbird.CustomTools/ViewJsonWebToken.xaml
@@ -8,6 +8,9 @@
     xmlns:avalonedit="http://icsharpcode.net/sharpdevelop/avalonedit"
     mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
+    <ui:ModernContent.Resources>
+        <local:JwtNameToDescriptionConverter x:Key="JwtNameToDescriptionConverter"/>
+    </ui:ModernContent.Resources>
     <!-- Enable following resource will help to preview target styles included in Hummingbird UI.
     During deployment these resources should be removed.
     -->
@@ -19,47 +22,154 @@
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </ui:ModernContent.Resources>-->
-    <ui:GridWithPadding Padding="4">
+    <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="Auto" />
-            <ColumnDefinition Width="*" />
-        </Grid.ColumnDefinitions>
+
         <Border Background="{DynamicResource HighlightGradientBrushHorizontal}"  Grid.ColumnSpan="2" >
-            <TextBlock Text="JSON Web Token Utility" Foreground="White" Margin="10,4" Style="{DynamicResource TextBlockViewHeader}" HorizontalAlignment="Right" />
-        </Border>
-
-        <TextBlock Text="Encoded Token:"  Style="{DynamicResource TextBlockViewHeader}" Grid.Row="1" />
-        <TextBox x:Name="txtToken" Grid.Row="1"  Grid.Column="2" TextChanged="TxtToken_TextChanged" TextWrapping="Wrap" FontFamily="{DynamicResource CodeFontFamily}" />
-
-        <TextBlock Text="Encoded Secret:"  Style="{DynamicResource TextBlockViewHeader}" Grid.Row="2" />
-        <TextBox x:Name="txtSecret" Grid.Row="2"  Grid.Column="2" TextChanged="TxtSecret_TextChanged" TextWrapping="Wrap" FontFamily="{DynamicResource CodeFontFamily}"/>
-
-        <ui:GridWithPadding Grid.Row="3" Grid.Column="1" Padding="4">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="Auto" />
-                <RowDefinition Height="*" />
-            </Grid.RowDefinitions>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition/>
-                <ColumnDefinition/>
-            </Grid.ColumnDefinitions>
-
-            <Border Background="{DynamicResource ControlBackgroundBrush}" Margin="1" Padding="4">
-            <TextBlock Text="HEADER"  Style="{DynamicResource TextBlockInformation}" />
+                <TextBlock Text="JSON Web Token Utility" Foreground="White" Margin="10,4" Style="{DynamicResource TextBlockViewHeader}" HorizontalAlignment="Right" />
             </Border>
-            <avalonedit:TextEditor Foreground="{DynamicResource ForegroundBrush}" Grid.Row="1" Background="Transparent" HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto" x:Name="txtHeader" TextChanged="TxtHeader_TextChanged" />
 
-            <Border Grid.Column="1" Background="{DynamicResource ControlBackgroundBrush}" Margin="1" Padding="4">
-                <TextBlock Text="PAYLOAD"  Style="{DynamicResource TextBlockInformation}"  />
-            </Border>
-            <avalonedit:TextEditor Foreground="{DynamicResource ForegroundBrush}" Grid.Row="1" Grid.Column="1" Background="Transparent" HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto" x:Name="txtPayload" TextChanged="TxtPayload_TextChanged"/>
-        </ui:GridWithPadding>
-        
-    </ui:GridWithPadding>
+        <TabControl Grid.Row="1">
+            <TabItem Header="JWT Decoder">
+                <ui:GridWithPadding Padding="4">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="*" />
+                    </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="Auto" />
+                        <ColumnDefinition Width="*" />
+                    </Grid.ColumnDefinitions>
+
+
+                    <TextBlock Text="Encoded Token:"  Style="{DynamicResource TextBlockViewHeader}" Grid.Row="1" />
+                    <TextBox x:Name="txtToken" Grid.Row="1"  Grid.Column="2" TextChanged="TxtToken_TextChanged" TextWrapping="Wrap" FontFamily="{DynamicResource CodeFontFamily}" />
+
+                    <TextBlock Text="Secret:"  Style="{DynamicResource TextBlockViewHeader}" Grid.Row="2" />
+                    <TextBox x:Name="txtSecret" Grid.Row="2"  Grid.Column="2" TextChanged="TxtSecret_TextChanged" TextWrapping="Wrap" FontFamily="{DynamicResource CodeFontFamily}"/>
+
+                    <ui:GridWithPadding Grid.Row="3" Grid.Column="1" Padding="4">
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="Auto" />
+                            <RowDefinition Height="*" />
+                        </Grid.RowDefinitions>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition/>
+                            <ColumnDefinition/>
+                        </Grid.ColumnDefinitions>
+
+                        <Border Background="{DynamicResource ControlBackgroundBrush}" Margin="1" Padding="4">
+                            <TextBlock Text="HEADER"  Style="{DynamicResource TextBlockInformation}" />
+                        </Border>
+                        <avalonedit:TextEditor Foreground="{DynamicResource ForegroundBrush}" Grid.Row="1" Background="Transparent" HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto" x:Name="txtHeader" TextChanged="TxtHeader_TextChanged" />
+
+                        <Border Grid.Column="1" Background="{DynamicResource ControlBackgroundBrush}" Margin="1" Padding="4">
+                            <TextBlock Text="PAYLOAD"  Style="{DynamicResource TextBlockInformation}"  />
+                        </Border>
+                        <avalonedit:TextEditor Foreground="{DynamicResource ForegroundBrush}" Grid.Row="1" Grid.Column="1" Background="Transparent" HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto" x:Name="txtPayload" TextChanged="TxtPayload_TextChanged"/>
+                    </ui:GridWithPadding>
+
+                </ui:GridWithPadding>
+
+            </TabItem>
+            <TabItem Header="JWT Generator">
+                <ui:GridWithPadding Padding="4">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="*" />
+                        <RowDefinition Height="Auto" />
+                    </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="Auto"/>
+                        <ColumnDefinition Width="*" />
+                    </Grid.ColumnDefinitions>
+                    <TextBlock Text="Generate a Json Web Token (JWT)" Style="{DynamicResource TextBlockInformation}" Grid.ColumnSpan="2" />
+                    <TextBlock Text="HEADER" Style="{DynamicResource TextBlockInformationHighlighted}" Grid.Row="1" />
+
+                    <TextBlock Text="Algorithm:"  Grid.Row="2"/>
+                    <ComboBox Grid.Row="2" Grid.Column="2" Margin="2" x:Name="cbAlgorithms" />
+
+                    <TextBlock Text="Secret (private key):"  Grid.Row="3"/>
+                    <AdornerDecorator Grid.Row="3" Grid.Column="1">
+                        <TextBox x:Name="txtSecretKey" Margin="2">
+                            <ui:WatermarkService.Watermark>
+                                <TextBlock Text="UrlBase64 encoded secret (private key), Ensure the key size is long enough according to selected algorithm" />
+                            </ui:WatermarkService.Watermark>
+                        </TextBox>
+                    </AdornerDecorator>
+
+                    <TextBlock Text="PAYLOAD" Style="{DynamicResource TextBlockInformationHighlighted}" Grid.Row="4" />
+                    <ListView Grid.Row="5" x:Name="lstPayload" Grid.ColumnSpan="2" >
+                        <ListView.View>
+                            <GridView>
+                                <GridViewColumn>
+                                    <GridViewColumn.CellTemplate>
+                                        <DataTemplate>
+                                            <Button Tag="{Binding}" Style="{DynamicResource ToolbarButtonStyle}" x:Name="BtnRemoveClaim">
+                                                <Rectangle Width="16" Height="16">
+                                                    <Rectangle.Fill>
+                                                        <DrawingBrush>
+                                                            <DrawingBrush.Drawing>
+                                                                <DrawingGroup>
+                                                                    <DrawingGroup.Children>
+                                                                        <GeometryDrawing Brush="#00FFFFFF" Geometry="F1M16,16L0,16 0,0 16,0z" />
+                                                                        <GeometryDrawing Brush="#FFF6F6F6" Geometry="F1M3.9996,0.999700000000001L3.9996,1.9997 -0.000399999999999956,1.9997 -0.000399999999999956,5.9997 1.9996,5.9997 1.9996,12.0007 3.9996,12.0007 3.9996,15.9997 16.0006,15.9997 16.0006,0.999700000000001z" />
+                                                                        <GeometryDrawing Brush="#FF424242" Geometry="F1M12,14L6,14 6,11 12,11z M4,7L10,7 10,10 4,10z M8,2L8,3 12,3 12,6 3,6 3,11 5,11 5,15 15,15 15,2z" />
+                                                                        <GeometryDrawing Brush="#FFEFEFF0" Geometry="F1M8,6L12,6 12,3 8,3z M6,14L12,14 12,11 6,11z M10,10L4,10 4,7 10,7z" />
+                                                                        <GeometryDrawing Brush="#FFA1260D" Geometry="F1M7,5L1,5 1,3 7,3z" />
+                                                                    </DrawingGroup.Children>
+                                                                </DrawingGroup>
+                                                            </DrawingBrush.Drawing>
+                                                        </DrawingBrush>
+                                                    </Rectangle.Fill>
+                                                </Rectangle>
+                                            </Button>
+                                        </DataTemplate>
+                                    </GridViewColumn.CellTemplate>
+                                </GridViewColumn>
+                                <GridViewColumn Header="NAME" Width="100" >
+                                    <GridViewColumn.CellTemplate>
+                                        <DataTemplate>
+                                            <TextBox Text="{Binding Name, Mode=TwoWay}" Style="{DynamicResource NoBorderTextboxStyle}" />
+                                        </DataTemplate>
+                                    </GridViewColumn.CellTemplate>
+                                </GridViewColumn>
+                                <GridViewColumn Header="VALUE" Width="200">
+                                    <GridViewColumn.CellTemplate>
+                                        <DataTemplate>
+                                            <TextBox Text="{Binding Value, Mode=TwoWay}" Margin="0" />
+                                        </DataTemplate>
+                                    </GridViewColumn.CellTemplate>
+                                </GridViewColumn>
+                                <GridViewColumn Header="Description" Width="400">
+                                    <GridViewColumn.CellTemplate>
+                                        <DataTemplate>
+                                            <TextBlock Text="{Binding Name, Converter={StaticResource JwtNameToDescriptionConverter}}" />
+                                        </DataTemplate>
+                                    </GridViewColumn.CellTemplate>
+                                </GridViewColumn>
+                            </GridView>
+                        </ListView.View>
+                    </ListView>
+
+                    <ui:ModernLink IconKey="appbar_arrow_right" Text="GENERATE TOKEN" Grid.Row="6" Grid.ColumnSpan="2" IconForegroundBrush="{DynamicResource HighlightBrush}" Foreground="{DynamicResource HighlightDarkBrush}" x:Name="LnkGenerateToken" Click="LnkGenerateToken_Click" />
+
+                    <TextBlock Text="Token:" Grid.Row="7" Margin="4" />
+                    <TextBox x:Name="txtJwtToken" Grid.Row="7" Grid.Column="1" TextWrapping="Wrap" VerticalAlignment="Top" Margin="4" FontFamily="{DynamicResource CodeFontFamily}" FontSize="{DynamicResource Value14}"  />
+                </ui:GridWithPadding>
+            </TabItem>
+        </TabControl>
+
+    </Grid>
 </ui:ModernContent>
