--- a/CustomTools.Test/MainWindow.xaml
+++ b/CustomTools.Test/MainWindow.xaml
@@ -9,14 +9,15 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <TabControl>
-        <TabItem Header="JWT">
+        <TabItem Header="JW Decoder">
             <customtools:ViewJsonWebToken />
         </TabItem>
+        <TabItem Header="JWT Generator">
+            <customtools:ViewJwtGenerator />
+        </TabItem>        
         <TabItem Header="ViewDocFormatter">
             <customtools:ViewDocFormatter />
         </TabItem>
-        <TabItem Header="JWT Utility">
-            <customtools:ViewJwtGenerator />
-        </TabItem>
+
     </TabControl>
 </ui:BasicWindow>
