--- a/Hummingbird.CustomTools/ViewJsonWebToken.xaml
+++ b/Hummingbird.CustomTools/ViewJsonWebToken.xaml
@@ -36,8 +36,12 @@
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto" />
                 <RowDefinition Height="Auto" />
-                <RowDefinition Height="Auto" />
                 <RowDefinition Height="*" />
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="Auto" />
@@ -49,29 +53,58 @@
             <TextBlock Text="Encoded Token:"  Style="{DynamicResource TextBlockViewHeader}" Grid.Row="1" Margin="4,6,4,5" />
             <TextBox x:Name="txtToken" Grid.Row="1"  Grid.Column="1" TextChanged="TxtToken_TextChanged" TextWrapping="Wrap" FontFamily="{DynamicResource CodeFontFamily}" Grid.ColumnSpan="2" Margin="4,4,4,3" />
 
-            <TextBlock Text="Secret:"  Style="{DynamicResource TextBlockViewHeader}" Grid.Row="2" Margin="4,6,4,5" />
-            <TextBox x:Name="txtSecret" Grid.Row="2"  Grid.Column="1" TextChanged="TxtSecret_TextChanged" TextWrapping="Wrap" FontFamily="{DynamicResource CodeFontFamily}" Grid.ColumnSpan="2" Margin="4,4,4,3"/>
 
-            <ui:GridWithPadding Grid.Row="3" Grid.Column="1" Padding="4" Grid.ColumnSpan="2">
+            <ui:GridWithPadding Grid.Row="2" Grid.Column="1" Padding="4" Grid.ColumnSpan="2">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto" />
                     <RowDefinition Height="*" />
                 </Grid.RowDefinitions>
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition/>
-                    <ColumnDefinition/>
+                    <ColumnDefinition Width="3*"/>
+                    <ColumnDefinition Width="4*"/>
                 </Grid.ColumnDefinitions>
 
                 <Border Background="{DynamicResource ControlBackgroundBrush}" Margin="1" Padding="4">
                     <TextBlock Text="HEADER"  Style="{DynamicResource TextBlockInformation}" />
                 </Border>
-                <avalonedit:TextEditor Foreground="{DynamicResource ForegroundBrush}" Grid.Row="1" Background="Transparent" HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto" x:Name="txtHeader" TextChanged="TxtHeader_TextChanged" />
+                <avalonedit:TextEditor Foreground="{DynamicResource ForegroundBrush}" Grid.Row="1" Background="Transparent" HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto" x:Name="txtHeader" />
 
                 <Border Grid.Column="1" Background="{DynamicResource ControlBackgroundBrush}" Margin="1" Padding="4">
                     <TextBlock Text="PAYLOAD"  Style="{DynamicResource TextBlockInformation}"  />
                 </Border>
-                <avalonedit:TextEditor Foreground="{DynamicResource ForegroundBrush}" Grid.Row="1" Grid.Column="1" Background="Transparent" HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto" x:Name="txtPayload" TextChanged="TxtPayload_TextChanged"/>
+                <avalonedit:TextEditor Foreground="{DynamicResource ForegroundBrush}" Grid.Row="1" Grid.Column="1" Background="Transparent" HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto" x:Name="txtPayload"/>
             </ui:GridWithPadding>
+
+
+            <Border Grid.Row="3" Grid.ColumnSpan="3" Background="{DynamicResource ControlBackgroundBrush}" BorderThickness="0,1,0,1" BorderBrush="{DynamicResource HighlightGradientBrushHorizontal}" >
+                <TextBlock Text="Signature Validation:"  Style="{DynamicResource TextBlockViewHeaderHighlighted}" Margin="10,4" />
+            </Border>
+            <TextBlock Text="Secret:"  Style="{DynamicResource TextBlockInformation}" Grid.Row="4" Margin="4,6,4,5" />
+            <AdornerDecorator Grid.Row="4"  Grid.Column="1" >
+                <TextBox x:Name="txtSecret" TextWrapping="Wrap" FontFamily="{DynamicResource CodeFontFamily}" Grid.ColumnSpan="2" Margin="4,2">
+                    <ui:WatermarkService.Watermark>
+                        <TextBlock Text="Used to validate JWT signature when using symmetric algorithm." />
+                    </ui:WatermarkService.Watermark>
+                </TextBox>
+            </AdornerDecorator>
+
+            <TextBlock Text="Key Format:" Style="{DynamicResource TextBlockInformation}"  Grid.Row="5" VerticalAlignment="Center" Margin="4,6,4,5"/>
+            <ComboBox x:Name="cbKeyFormat" Grid.Row="5" Grid.Column="1" Margin="4,2" />
+
+
+            <TextBlock Text="Certificate:"  Style="{DynamicResource TextBlockInformation}"  Grid.Row="6" Margin="4,6,4,5" />
+            <StackPanel Orientation="Horizontal" Grid.Row="6"  Grid.Column="1">
+                <Button x:Name="btnCertificate" Grid.ColumnSpan="2" Margin="4,4,4,3" HorizontalAlignment="Left" Click="BtnCertificate_Click">
+                    Import PKCS#12 Certificate
+                </Button>
+                <TextBlock Text="* Used when using asymmetric signing algorithms." VerticalAlignment="Center" x:Name="lblCertificate" />
+            </StackPanel>
+            <Button x:Name="btnValidate" Grid.ColumnSpan="2" Margin="4,4,4,3" Grid.Row="7" Grid.Column="1" HorizontalAlignment="Right" Style="{DynamicResource FlatButtonStyle}" Click="BtnValidate_Click">
+                <StackPanel Orientation="Horizontal">
+                    <ui:AppBarIcon IconKey="appbar_check" Height="32" IsCircleVisible="True" />
+                    <TextBlock Text="Validate Signature" VerticalAlignment="Center" Margin="4,0" />
+                </StackPanel>
+            </Button>
 
         </ui:GridWithPadding>
 
